feat(mir): migrate to v1.3 graph patch
